Update JavaRuntimeViaHttpBase.java
Fix missing flag fragment from previous change.

Default java8 build system did not detect this, only github worflows using java11 and java17, which is the good intended way of testing with other JDKs.